--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <style type="text/css">
-        /*随便写点啥*/
-        h1 {
-            font-size: 16px;
-        }
-        p {
-            font-size: 12px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
-<h1>这是首页</h1>
-<p>里面有很多分类的内容</p>
+<div class="header">
+    <div class="container">
+        <ul class="nav">
+            <li class="on"><a href="#" title="首页">首页</a></li>
+            <li><a href="#" title="前端笔记">前端笔记</a></li>
+            <li><a href="#" title="网页作品">网页作品</a></li>
+            <li><a href="#" title="转载分享">转载分享</a></li>
+            <li><a href="#" title="生活锁事">生活锁事</a></li>
+        </ul>
+        <h1>井井客</h1>
+    </div>
+</div>
 <script>
     // 注释的内容
     console.log('11');
